<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="inwardOutwardDetails"
            type="com.example.sevg.room.model.InwardOutwardColumns" />

        <variable
            name="onClickInterface"
            type="com.example.sevg.viewOnClickInterface.ViewOnClickListener" />
    </data>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/details_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="200dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/inventory_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/ThemeOverlay.MyApp.ActionBar"
            style="@style/Widget.MyApp.Details.Toolbar"/>


        <LinearLayout
            android:id="@+id/details_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:background="@drawable/login_bg_gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inventory_details_toolbar"
            app:layout_constraintBottom_toTopOf="@+id/details_guideline"
            android:baselineAligned="false"
            android:padding="@dimen/sevg_10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sevg_18sp"
                    android:text="@{inwardOutwardDetails.billNo}"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sevg_16sp"
                    android:layout_marginBottom="@dimen/sevg_25dp"
                    android:text="@string/bill_number"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sevg_18sp"
                    android:text="@{inwardOutwardDetails.inventoryType == 0 ? @string/inward : @string/outward}"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sevg_16sp"
                    android:text="@string/transfer_status"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sevg_18sp"
                    android:text="@{inwardOutwardDetails.dateTime}"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sevg_16sp"
                    android:layout_marginBottom="@dimen/sevg_25dp"
                    android:text="@string/date"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="@dimen/sevg_10dp">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cellborder"
                android:divider="@color/black"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/itemName_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/item_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/amount_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/total_amount_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <LinearLayout
                android:id="@+id/tableBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/sevg_5dp"/>

            <Button
                android:id="@+id/submit"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="@dimen/sevg_18sp"
                android:layout_marginTop="@dimen/sevg_15dp"
                android:backgroundTint="@color/dark_blue"
                android:layout_marginBottom="@dimen/sevg_20dp"
                android:onClick="@{(v)-> onClickInterface.onViewClick(v)}"
                android:text="@string/save"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

</layout>